2006-09-12  Neil Williams <linux@codehelp.co.uk>

	* debian/changelog : fix priority setting for 
	the new backend packages.

	* backend/Makefile.am,
	backend/dwi/README,
	po/POTFILES.skip : only distribute DWI, don't 
	try to build it anymore.

	* backend/gda/qof-gda.c,
	backend/gda/qof-gda.h : improve gda backend 
	with error handling and data sources.

	* qof/qof.h,
	qof/qoferror-p.h,
	qof/qoferror.c,
	qof/qoferror.h,
	qof/Makefile.am	: New Error handler files.

	* backend/file/qsf-backend.c,
	backend/file/qsf-xml-map.c : Beginning move to QofError.

	* qof/deprecated.c,
	qof/deprecated.h : Deprecating backend and session error
	handlers in favour of QofError.

	* qof/qofbackend-p.h,
	qof/qofbackend.c,
	qof/qofbackend.h,
	qof/qofsession-p.h,
	qof/qofsession.c,
	qof/qofsession.h : Removing deprecated code.

	* qof/qofutil.c,
	qof/qofutil.h : Start and close QofError by default.

	* po/en_GB.po : New strings added.

2006-09-09  Neil Williams <linux@codehelp.co.uk>

	* configure.in : Support for gda backend.
	* backend/Makefile.am : Build GDA only when
	libgda2 is available.
	* backend/gda/.cvsignore : new file.
	* backend/gda/Makefile.am : new file.
	* backend/gda/qof-gda.c : Outline.
	* backend/gda/qof-gda.h : Outline.
	* doc/doxygen.cfg.in : Include GDA in libqof-doc.

	* backend/sqlite/qof-sqlite.c,
	backend/sqlite/qof-sqlite.h : unregister 
	handlers and tidy up g_free use.

2006-08-31  Neil Williams <linux@codehelp.co.uk>

	* backend/file/qsf-backend.c : Ensure a book
	is marked clean after a save.
	* backend/sqlite/qof-sqlite.c : Fix sync method
	to insert new data and update old.
	* qof/qofsession.c : Tweak debug messages.
	* qof/qofutil.c : Decrement editlevel on commit.

2006-08-29  Neil Williams <linux@codehelp.co.uk>

	* qof/qofbackend.c : Log module errors instead of
	bothering the user on stderr.
	* qof/qofsession.c : Add the sqlite module
	backend so it can be loaded when available.
	* website/hacking.html :
